manifests/chef-webhook/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "2"
      field.cattle.io/publicEndpoints: '[{"addresses":["35.241.255.137"],"port":443,"protocol":"HTTPS","serviceName":"chef-webhook:webhook-receiver","ingressName":"chef-webhook:webhook-ingress","hostname":"webhook.35.241.255.137.nip.io","path":"/","allNodes":false}]'
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"field.cattle.io/publicEndpoints":"[{\"addresses\":[\"35.241.255.137\"],\"port\":443,\"protocol\":\"HTTPS\",\"serviceName\":\"chef-webhook:webhook-receiver\",\"ingressName\":\"chef-webhook:webhook-ingress\",\"hostname\":\"webhook.35.241.255.137.nip.io\",\"path\":\"/\",\"allNodes\":false}]"},"name":"webhook-receiver","namespace":"chef-webhook"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":1 [...]
    name: webhook-receiver
    namespace: chef-webhook
  spec:
    progressDeadlineSeconds: 600
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: webhook-receiver
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        labels:
          app: webhook-receiver
      spec:
        affinity:
          nodeAffinity:
            preferredDuringSchedulingIgnoredDuringExecution:
            - preference:
                matchExpressions:
                - key: kubernetes.io/hostname
                  operator: In
                  values:
                  - oci-e5-node1
                  - oci-e5-node2
              weight: 100
        containers:
        - command:
          - python3
          - /app/server.py
          image: python:3.11-slim
          imagePullPolicy: IfNotPresent
          name: server
          ports:
          - containerPort: 8080
            protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /app
            name: script
          - mountPath: /data
            name: data
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - configMap:
            defaultMode: 420
            name: webhook-server
          name: script
        - emptyDir: {}
          name: data
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2026-04-14T02:08:33Z"
      lastUpdateTime: "2026-04-14T20:14:58Z"
      message: ReplicaSet "webhook-receiver-77d4bb77c4" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2026-04-22T12:25:07Z"
      lastUpdateTime: "2026-04-22T12:25:07Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 8
    readyReplicas: 1
    replicas: 1
    updatedReplicas: 1
kind: List
metadata:
