manifests/chef-webhook/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"webhook-receiver","namespace":"chef-webhook"},"spec":{"ports":[{"port":80,"targetPort":8080}],"selector":{"app":"webhook-receiver"}}}
    name: webhook-receiver
    namespace: chef-webhook
  spec:
    clusterIP: 10.110.225.109
    clusterIPs:
    - 10.110.225.109
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
    selector:
      app: webhook-receiver
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
kind: List
metadata:
